--- a/Service.API.ERP.csproj
+++ b/Service.API.ERP.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Serilog" Version="2.7.1" />
   </ItemGroup>
 
 </Project>
